Atualização do CSS básico

--- a/SC_5_HTML5/formulario.html
+++ b/SC_5_HTML5/formulario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Caracteres Especiais</h2>
-    &ltp&gt;
+    &lt p &gt;
     <h2>Login</h2>
     <h1> Home&nbsp;&nbsp;-&nbsp;&nbsp;Quem Somos&nbsp;&nbsp;-&nbsp; Contato</h1>
     <form>
@@ -43,7 +43,7 @@
         </select>
         <br>
         Observações: <br>
-        <textarea name="'area"></textarea>
+        <textarea name="area"></textarea>
         <br>
         <input type="submit" value="Cadastrar"><br>
     </form>
