--- a/SC_5_HTML5/projeto.html
+++ b/SC_5_HTML5/projeto.html
@@ -10,7 +10,7 @@
     <!-- <img src="imagens/ferrari.jpg" width="400" height="200"> -->
     <img src="imagens/ferrari.jpg">
     <b>teste do entendimento</b> <br>
-    <b>teste do entendimento</b> <br>
+    <i>teste do entendimento</i> <br>
 
    <h1> Sobre a empresa </h1>
    <h2>  Essa é uma empresa pequena</h2>
@@ -51,10 +51,20 @@
     <!-- Type: 1, A, a, I, i -->
     <h2>Mapa do Site</h2>
     <ol type="I">
-        <li>Home</li>
+        <li>Home 
+            <ol type="i">
+                <li> casa2</li>
+            </ol>
+
+        </li>
         <li>Quem Somos</li>
         <li>Contato</li>
     </ol>
+
+    <ul>
+        <li> teste  </li>
+        <li> teste</li>
+    </ul>
     
    
 </body>        
