--- a/SC_6_CSS/basico_1/fundamentos/Internal_style.html
+++ b/SC_6_CSS/basico_1/fundamentos/Internal_style.html
@@ -9,6 +9,7 @@
             background-color: black;
         }
         h1 {color:blue}
+        h2 {color:green}
 
     </style>
 
@@ -35,6 +36,9 @@
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, harum? Ex eius nesciunt
         repellendus reprehenderit dolores quaerat dignissimos sunt debitis iste aliquid! Soluta numquam cumque officiis
         officia quia omnis ab!</p>
+
+
+    <h2>Formatando</h2>
 </body>
 
 </html>
