--- a/SC_6_CSS/basico_1/fundamentos/div_span.html
+++ b/SC_6_CSS/basico_1/fundamentos/div_span.html
@@ -24,6 +24,18 @@
 <!-- span são elementos do tipo inline -->
 
 <body>
+    <div style="border: 1px solid red">
+        Um
+    </div>
+    <div>
+        Dois
+    </div>
+    <span style="border: 1px solid red">
+        Um
+    </span>
+    <span>
+        Dois
+    </span>
     <div id="topo">
         <img src="Imagens/amazon.jpg">
         <ul>
