--- a/SC_6_CSS/basico_1/fundamentos/inline_style.html
+++ b/SC_6_CSS/basico_1/fundamentos/inline_style.html
@@ -12,5 +12,7 @@
     <p style="color: red; background-color: aqua;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, deleniti cumque praesentium similique earum veniam nam voluptatum quis sunt voluptatem. Enim ullam perspiciatis possimus odio doloribus. Tenetur sit mollitia officia?</p>
 
     <p style="color:blue;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, harum? Ex eius nesciunt repellendus reprehenderit dolores quaerat dignissimos sunt debitis iste aliquid! Soluta numquam cumque officiis officia quia omnis ab!</p>
+
+    <p style="background-color: blueviolet;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quo sit itaque fugiat molestiae totam. Quia eveniet maiores dolores excepturi quae nisi impedit molestias blanditiis voluptatum alias, corrupti earum beatae!</p>
 </body>
 </html>
