--- a/SC_5_HTML5/UNES_html/index.html
+++ b/SC_5_HTML5/UNES_html/index.html
@@ -6,7 +6,7 @@
     <title>UNES - Página Principal</title>
 </head>
 <body background="imagens/fundo.png" >
-    <table border="0" width="900" align="center">
+    <table border="0" width="900px" align="center">
         <tr>
             <td><img src="imagens/logo.png"></td>
             <td align="right"> <a href="">Home</a>  
