--- a/SC_6_CSS/basico_1/fundamentos/classes_ids.html
+++ b/SC_6_CSS/basico_1/fundamentos/classes_ids.html
@@ -8,7 +8,7 @@
         p { color:red}
         h1 {color:green}
         .azul { color:blue}
-        #principal{background:yellowgreen}
+         #principal{background:yellowgreen}
 
     </style>
 
@@ -36,6 +36,9 @@
     <p style= "color:blue"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, harum? Ex eius nesciunt
         repellendus reprehenderit dolores quaerat dignissimos sunt debitis iste aliquid! Soluta numquam cumque officiis
         officia quia omnis ab!</p>
+
+    <p style="color:red">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur numquam provident libero quam quidem eligendi, vero nostrum saepe, odit quis rem asperiores! Voluptatum cumque tempore velit commodi rerum at aliquid.
+    </p>
 </body>
 
 </html>
