Comentários no BootStrap

--- a/SC_9_Bootstrap4/apoio-alinhamento-grid.html
+++ b/SC_9_Bootstrap4/apoio-alinhamento-grid.html
@@ -40,7 +40,7 @@
         <div class="col borda">Área 3</div>
       </div>
 
-      <h2>Alinhamento horizontal individual (align-self-ALINHAMENTO: start, center, end)</h2>
+      <h2>Alinhamento vertical individual (align-self-ALINHAMENTO: start, center, end)</h2>
       <div class="row marcador">
         <div class="col borda align-self-start">Área 1</div>
         <div class="col borda align-self-center">Área 2</div>
