--- a/SC_9_Bootstrap4/apoio-cartoes-parte1.html
+++ b/SC_9_Bootstrap4/apoio-cartoes-parte1.html
@@ -36,14 +36,16 @@
           quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
         <a class="btn btn-outline-primary" href="">Leia mais</a>
       </div>
-      <img class="card-img-bottom" src="https://source.unsplash.com/random/600x200">
+      <img class="card-img-bottom"  src="https://picsum.photos/600/200?random=1">
+      <!-- <img class="card-img-bottom" src="https://source.unsplash.com/random/600x200"> -->
     </div>
 
     <br><br>
 
     <h3 class="border-bottom">Cartão com imagem sobreposta</h3>
     <div class="card text-white">
-      <img class="card-img" src="https://source.unsplash.com/random/600x250">
+      <img class="card-img" src="https://picsum.photos/600/250?random=1">
+      <!-- <img class="card-img" src="https://source.unsplash.com/random/600x250"> -->
       <div class="card-img-overlay">
         <h4 class="card-title">Título do cartão</h4>
         <h6 class="card-subtitle">Subtítulo do cartão</h6>
@@ -69,6 +71,8 @@
       </div>
     </div>
     <br><br>
+
+
 
     <h3 class="border-bottom">Cartão com cabeçalho e rodapé / Alinhamento</h3>
     <div class="card">
@@ -167,7 +171,8 @@
     <h3 class="border-bottom">Cartão com Colunas</h3>
     <div class="card-columns">
       <div class="card text-white">
-        <img class="card-img" src="https://source.unsplash.com/random/600x550">
+        <img class="card-img" src="https://picsum.photos/600/550?random=1">
+        <!-- <img class="card-img" src="https://source.unsplash.com/random/600x550"> -->
         <div class="card-img-overlay">
           <h4 class="card-title">Título do cartão</h4>
           <h6 class="card-subtitle">Subtítulo do cartão</h6>
