--- a/SC_9_Bootstrap4/apoio-font-awesome.html
+++ b/SC_9_Bootstrap4/apoio-font-awesome.html
@@ -17,6 +17,9 @@
     <!-- Fontawesome CSS -->
     <link rel="stylesheet" href="fontawesome/css/all.css">
 
+    <!-- Font BootStrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
   </head>
 
   <body style="margin-bottom: 200px;padding: 16px;">
@@ -28,7 +31,7 @@
     <i class="fab fa-free-code-camp display-3 bg-success" style="color: blue;"></i>
     <i class="fab fa-freebsd" style="font-size:100px; color:blueviolet"></i>
     <i class="fab fa-freebsd" style="font-size:100px; background-color: rgb(72, 159, 230);"></i>
-
+    <i class="fa-solid fa-star" style="font-size:50px;color:yellow; background-color: black;"></i>
 
     <button class="btn btn-danger btn-lg">
       <i class="fas fa-bomb"></i>
@@ -46,7 +49,8 @@
     </button>
     <i class="oi oi-audio display-3"></i>
 
-    
+    <h3 class="border-bottom">BootStrap</h3>
+    <i class="bi bi-webcam-fill" style="font-size: 150px; color:red"></i>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
