--- a/SC_9_Bootstrap4/apoio-formularios.html
+++ b/SC_9_Bootstrap4/apoio-formularios.html
@@ -21,8 +21,8 @@
         opções: sm, lg
     -->
     <form>
-        
-        <!-- caixas de texto -->
+         
+        <!-- caixas de texto form-group para dar espaçamento -->
         <div class="form-group">
             <label for="usuario">Usuário</label>
             <input class="form-control" type="text" id="usuario" placeholder="Digite seu usuário">
