--- a/SC_9_Bootstrap4/apoio-grid.html
+++ b/SC_9_Bootstrap4/apoio-grid.html
@@ -25,11 +25,14 @@
   </head>
 
   <body>
+    <!-- Container é a parte visual editável do Site, por assim dizer -->
     <div class="container marcador-container">
+      <!-- Quando uso o row, vc cria um flex container -->
       <div class="row marcador">
         Topo
       </div>
       <div class="row">
+        <!-- flex itens... -->
         <div class="marcador col-6 col-sm-2 col-md-10 col-lg-2">Área 1</div>
         <div class="marcador col-6 col-sm-10 col-md-2 col-lg-10">Área 2</div>
       </div>
@@ -44,7 +47,7 @@
           Coluna 3
         </div>
       </div>
-      <div class="row">
+      <div class="row marcador col-6">
         Rodapé
       </div>
     </div>
