--- a/SC_9_Bootstrap4/apoio-margin-wrap.html
+++ b/SC_9_Bootstrap4/apoio-margin-wrap.html
@@ -46,6 +46,7 @@
       <br><br>
 
       <h2>Wrap (flex-wrap, flex-nowrap)</h2>
+      <!-- nowrap é o padrão e fica tudo na mesma linha, criando um scroll-->
       <div class="caixa d-flex flex-wrap">
         <div class="item">Flex item 1</div>
         <div class="item">Flex item 2</div>
