--- a/SC_9_Bootstrap4/apoio-tabelas-paginacao.html
+++ b/SC_9_Bootstrap4/apoio-tabelas-paginacao.html
@@ -218,7 +218,7 @@
     </table>
 
     <h2>Tabela responsiva: table-responsive</h2>
-    <div class="table-responsive">
+    <div class="table-responsive table-striped table-bordered">
       <table class="table">
         <thead>
           <tr>
@@ -235,21 +235,21 @@
             <td>00001</td>
             <td>Iphone X</td>
             <td>Apple</td>
-            <td>Lorem</td>
+            <td>LoremLoremLoremLoremLorem</td>
             <td>R$ 6.999</td>
           </tr>
           <tr>
             <td>00002</td>
             <td>Nexus 5</td>
             <td>LG</td>
-            <td>Lorem</td>
+            <td>LoremLoremLoremLoremLorem</td>
             <td>R$ 999</td>
           </tr>
           <tr>
             <td>00003</td>
             <td>Notebook VAIO</td>
             <td>Sony</td>
-            <td>Lorem</td>
+            <td>LoremLoremLoremLoremLorem</td>
             <td>R$ 1.999</td>
           </tr>
         </tbody>
