--- a/SC_9_Bootstrap4/margin.html
+++ b/SC_9_Bootstrap4/margin.html
@@ -26,7 +26,7 @@
     Valor a definir (0 até 5)
     -->
 <h1 class="bg-info mt-3" style="margin:0">Margin</h1>
-<p class="bg-success mt-2 ml-3">Conteúdo principal</p>
+<p class="text-danger bg-success mt-2 ml-3">Conteúdo principal</p>
 <h1 class="bg-success m-5">Margin</h1>
 
 <br>
@@ -43,7 +43,7 @@
     Valor a definir (0 até 5)
     -->
 <h1 class="bg-success pb-5">Padding</h1>
-<p class="bg-success p-5">Conteúdo principal</p>
+<p class="bg-danger p-5">Conteúdo principal</p>
 <h1 class="bg-success pt-5">Padding</h1>
 
 <br>
