--- a/SC_9_Bootstrap4/apoio-alertas-barra-progresso.html
+++ b/SC_9_Bootstrap4/apoio-alertas-barra-progresso.html
@@ -69,7 +69,7 @@
     <br>
     <h2>Barra de progresso II</h2>
     <div class="progress">
-      <div class="progress-bar" style="width: 25%;">25%</div>
+      <div class="progress-bar" style="width: 5%;">5%</div>
     </div>
     <br>
     <h2>Barra de progresso III</h2>
@@ -80,7 +80,7 @@
 
     <h2>Altura</h2>
     <div class="progress" style="height: 50px;">
-      <div class="progress-bar bg-warning" style="width: 40%;"></div>
+      <div class="progress-bar bg-warning" style="width: 40%;">40%</div>
     </div>
     <br>
     
