--- a/SC_9_Bootstrap4/apoio-jumbotron-alinhamento-imagens.html
+++ b/SC_9_Bootstrap4/apoio-jumbotron-alinhamento-imagens.html
@@ -23,13 +23,14 @@
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <a class="btn btn-primary btn-lg"href="">Leia mais</a>
+        <a class="btn btn-primary btn-lg" href="">Leia mais</a>
       </div>
     </div>
 
     <h3 class="border-bottom">Estrutura para imagens</h3>
     <div class="media">
-      <img class="mr-3" src="https://source.unsplash.com/random/60x60">
+      <img class="mr-3" src="https://picsum.photos/60/60?random=1">
+      <!-- <img class="mr-3" src="https://source.unsplash.com/random/60x60"> -->
       <div class="media-body p-2 border">
         <h5>Título do conteúdo</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
@@ -40,7 +41,7 @@
 
     <h3 class="border-bottom">Alinhamentos: align-self-ALINHAMENTO (start, center, end) </h3>
     <div class="media">
-      <img class="mr-3 align-self-center" src="https://source.unsplash.com/random/60x60">
+      <img class="mr-3 align-self-center" src="https://picsum.photos/60/60?random=1">
       <div class="media-body p-2 border">
         <h5>Título do conteúdo</h5>
         <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla
@@ -52,14 +53,14 @@
     <ul class="list-unstyled">
       
       <li class="media border-bottom pb-2">
-        <img class="mr-2" src="https://source.unsplash.com/random/80x80">
+        <img class="mr-2" src="https://picsum.photos/80/80?random=1">
         <div class="media-body">
           <h5>Título do conteúdo</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl.</p>
           </div>
       </li>
       <li class="media border-bottom pb-2 pt-2">
-        <img class="mr-2" src="https://source.unsplash.com/random/80x80">
+        <img class="mr-2" src="https://picsum.photos/80/80?random=1">
         <div class="media-body">
           <h5>Título do conteúdo</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis,
