--- a/SC_9_Bootstrap4/apoio-listas.html
+++ b/SC_9_Bootstrap4/apoio-listas.html
@@ -15,6 +15,7 @@
 
   <body style="margin-bottom: 200px;padding: 16px;">
 
+
     <!-- Listas -->
     <ul class="list-group">
         <li class="list-group-item">Meu item de lista 1</li>
@@ -24,7 +25,7 @@
     </ul>
     <br><br>
 
-    <!-- Listas com classe flush -->
+    <!-- Listas com classe flush /somente bordas superior e inferior-->
     <ul  class="list-group list-group-flush">
         <li class="list-group-item">Meu item de lista 1</li>
         <li class="list-group-item">Meu item de lista 2</li>
@@ -78,6 +79,7 @@
         </li>
     </ul>
     <br><br>
+
 
     <!-- Breadcrumb -->
     <ol class="breadcrumb">
