--- a/SC_10_JavaScript/ES6/concatenacao.html
+++ b/SC_10_JavaScript/ES6/concatenacao.html
@@ -16,7 +16,7 @@
         console.log(idade2);
         console.log(idade3);
 
-        document.write('<h1> Olá ' + nome2 + ', tudo bem?  Estou vendo que vc possui ' + idade2 + ' anos </h1>');
+        document.write("<h1> Olá " + nome2 + ', tudo bem?  Estou vendo que vc possui ' + idade2 + ' anos </h1>');
     </script>
 </head>
 
