--- a/SC_10_JavaScript/ES6/eventos_teclado.html
+++ b/SC_10_JavaScript/ES6/eventos_teclado.html
@@ -33,6 +33,8 @@
     <input onkeyup="acao2()" type="text">
     <br>
     <br>
+    <!-- Ocorre entre os 2 eventos acima, mas somente com caracteres
+         não incluindo ctrl, shift, alt e outros -->
     <input onkeypress="acao3()" type="text">
 </body>
 </html>
