--- a/SC_10_JavaScript/ES6/for_in.html
+++ b/SC_10_JavaScript/ES6/for_in.html
@@ -13,6 +13,7 @@
         lista[-1]='Pedro';
         lista['zebra'] = 'Paulo';
         
+        // serve para navegar por arrays que possuem chaves customizadas.
         for (var x in lista){
             console.log('Indice:' + x + '=' + lista[x]);
         }
