--- a/SC_10_JavaScript/ES6/funcoes_anonimas.html
+++ b/SC_10_JavaScript/ES6/funcoes_anonimas.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
     <script>
+        
+        // funções anônimas e técnica de wrapper (embrulhar)
+        //    Como chamar uma função Anônima? Atribui a uma variável..
         var exibirSaudacao = function(nome){
             document.write('Olá ' + nome +  ', tudo bem?');
         }
+
+        // A variável tem uma referência para a função
         exibirSaudacao('Diogo');
     </script>
 </head>
