--- a/SC_10_JavaScript/ES6/funcoes_datas.html
+++ b/SC_10_JavaScript/ES6/funcoes_datas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
     <script>
+        // Objeto Date e métodos
         var data = new Date();
 
         document.write('<br>');
@@ -35,6 +36,7 @@
         data.setFullYear(data.getFullYear() + 1);
         document.write(data.toString());
 
+        // Cuidar que os meses vão de 0 até 11 (dezembro)
         var d1 = new Date(2024,3,1);
         var d2 = new Date(2024,11,31);
 
