--- a/SC_10_JavaScript/ES6/funcoes_matematicas.html
+++ b/SC_10_JavaScript/ES6/funcoes_matematicas.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
     <script>
+
+        // funções matemáticas acessadas pelo método Math
         var x=10.380;
 
         document.write('<br>');
@@ -12,7 +14,7 @@
         // arredonda sempre para cima;
         y = Math.ceil(x);
         document.write(y);
-
+    
         document.write('<br>');
 
         //Sempre considera a parte inteira
