--- a/SC_10_JavaScript/ES6/funcoes_parametros_variaveis.html
+++ b/SC_10_JavaScript/ES6/funcoes_parametros_variaveis.html
@@ -29,7 +29,7 @@
         */
 
         // Parâmetros Variáveis no Contexto da Função
-        // arguments é um objeto, não um array
+        // arguments é um objeto que representa uma variável, não um array
         function soma(){
             var resultado = 0;
             for (var i in arguments) {
