--- a/SC_10_JavaScript/ES6/funcoes_string.html
+++ b/SC_10_JavaScript/ES6/funcoes_string.html
@@ -6,7 +6,8 @@
     <title>JavaScript</title>
     <script>
         // Inicia sempre com ZERO
-        // propriedade length
+        // propriedade length -atributo
+        // funçao charAt - método - possui parênteses
         document.write('<br>');
         document.write('Jorge Sant Ana'.length);
         document.write('<br>');
