--- a/SC_10_JavaScript/ES6/ifelse_operadores_condicionais.html
+++ b/SC_10_JavaScript/ES6/ifelse_operadores_condicionais.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Operadores Condicionais</title>
     <script>
-/*    if (true){
+    if (true){
         document.write('Entrou dentro do bloco IF <br>');
     }
     else{
@@ -15,7 +15,17 @@
     if (2=="2") {
         document.write('São iguais <br>');
     }
-*/
+
+    /*
+
+    = atribui
+    == igual mas não testa tipo
+    === igual no valor e no tipo
+    != diferente
+    !== diferente e de tipos diferente
+    > , >= , < , <=
+    */
+
     var nota= prompt('Digite a Nota do Aluno:');
     var media = 7;
 
