--- a/SC_10_JavaScript/ES6/switch.html
+++ b/SC_10_JavaScript/ES6/switch.html
@@ -8,6 +8,7 @@
         var parametro = prompt('Informe a idade');
 
         switch (parseInt(parametro)) {
+            // case 1 === parametro 
             case 1:
                 document.write('Criança');
                 break;
