--- a/SC_10_JavaScript/ES6/tratamento_erros.html
+++ b/SC_10_JavaScript/ES6/tratamento_erros.html
@@ -24,7 +24,7 @@
                 //esse parâmetro que vc recebe o erro.  Pode ser qualquer nome
                 console.log('Agora sim vamos tratar o erro');
                 tratarErro(deu_erro);
-                // Lançou o throw ele para a aplicação
+                // Lançou o throw para a aplicação e para o script
                 throw new Error('Houve um Erro, mas não se preocupe, estamos trabalhando nisso agora');
 
                 
