--- a/SC_10_JavaScript/ES6/variaveis.html
+++ b/SC_10_JavaScript/ES6/variaveis.html
@@ -13,10 +13,19 @@
         var testeTrue = true
         var testeFalse = false
 
-        // alert(texto);
+        alert(texto);
         // document.write(texto)
         // console.log(texto)
-        console.log(numeroInteiro)
+        // console.log(numeroInteiro)
+
+        /*
+            Não pode começar com números; 123variavel
+            Não pode ter espaços; casa nova
+            Não podem ter acentos ou caracteres especiais; número
+            Difere maiúsculas de minúsculas = Variavel <> variavel
+            Não podem palavras reservadas
+
+        */
 
 
 
