--- a/SC_10_JavaScript/ES6/app1/index.html
+++ b/SC_10_JavaScript/ES6/app1/index.html
@@ -117,6 +117,7 @@
               document.getElementById('resultado').value += valor;
               break;
             case '=':
+              // função eval transforma a string para uma expressão matemática
               var valor_campo = eval(document.getElementById('resultado').value);
               document.getElementById('resultado').value = valor_campo;
               break;
