--- a/SC_10_JavaScript/ES6/bom_window.html
+++ b/SC_10_JavaScript/ES6/bom_window.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
     <script>
+        // procurar as referências no w3school
     let myWindow;
 
     function openWin() {
