--- a/SC_10_JavaScript/ES6/while.html
+++ b/SC_10_JavaScript/ES6/while.html
@@ -14,6 +14,7 @@
             x++;
             if (x===5){
                 break;
+                // continue;
             }
         }
         document.write('FIM');
