--- a/SC_10_JavaScript/ES6/const.html
+++ b/SC_10_JavaScript/ES6/const.html
@@ -6,6 +6,8 @@
     <title>Constantes</title>
 
     <script>
+
+        // Precisa atribuir valor no momento da criação
         const SERIE = 'Friends';
         
         if (true){
