--- a/SC_10_JavaScript/ES6/foreach.html
+++ b/SC_10_JavaScript/ES6/foreach.html
@@ -8,8 +8,8 @@
         var lista=['Jorge', 'Hamilton', 'José', 'Maria', 'Jesus', 'Nazareno'];
 
         // Usando todos os parâmetros como uma função de callback
-        /*
-        lista.forEach(function(valor, indice, array){
+       
+       /* lista.forEach(function(valor, indice, array){
             console.log('Indice[' + indice + '] = ' + valor);
 
             if (valor =='Hamilton'){
