--- a/SC_10_JavaScript/ES6/funcoes_anonimas.html
+++ b/SC_10_JavaScript/ES6/funcoes_anonimas.html
@@ -14,6 +14,11 @@
 
         // A variável tem uma referência para a função
         exibirSaudacao('Diogo');
+
+        var teste = function exibirSaudacao2(nome){
+            document.write('<br> Olá ' + nome + ' por Função');
+        }
+        teste('Mauro');
     </script>
 </head>
 <body>
