--- a/SC_10_JavaScript/ES6/funcoes_arrow_function.html
+++ b/SC_10_JavaScript/ES6/funcoes_arrow_function.html
@@ -9,6 +9,12 @@
         {
             return (x * x);
         }
+
+        let quad = (x=1,y=5) => {return(x*y)};
+
+        document.write(quad(1,4));
+
+
         document.write(quadrado(13));
         
         // Arrow Function com nenhum ou varios parametros, usar o parenteses
