--- a/SC_10_JavaScript/ES6/bom_timing.html
+++ b/SC_10_JavaScript/ES6/bom_timing.html
@@ -13,7 +13,7 @@
         //                             window.location.reload()
         //                           } }, 2000);
         var i=5;
-        var x=setInterval(function () { document.write('i ' + i-- ); 
+        var x=setInterval(function () { document.write('i:=' + i--  + '<br>'); 
                             if (i===0){
                             clearInterval(x)
                             } }, 2000);
