--- a/SC_10_JavaScript/ES6/funcoes_arrow_function.html
+++ b/SC_10_JavaScript/ES6/funcoes_arrow_function.html
@@ -10,7 +10,7 @@
             return (x * x);
         }
 
-        let quad = (x=1,y=5) => {return(x*y)};
+        let quad = (x=1,y=5) => (x*y);
 
         document.write(quad(1,4));
 
