--- a/SC_10_JavaScript/ES6/objeto_literal_melhorias.html
+++ b/SC_10_JavaScript/ES6/objeto_literal_melhorias.html
@@ -29,6 +29,7 @@
         
         // ES6 permitiu suprimir o valor do par nome : valor, quando possuirem o mesmo nome,
         // apesar de serem referências diferentes
+        // Inclusive foi resumida a forma de escrever a função
         let objeto2 = {
             nomeTeste : nome,
             idade,
