--- a/SC_10_JavaScript/ES6/prototype.html
+++ b/SC_10_JavaScript/ES6/prototype.html
@@ -10,7 +10,7 @@
             cor : 'Branco',
             modelo : 'Airbus A380',
             levantarVoo: function() {
-                console.log('Levantar Voo');
+                console.log('Decolando');
             }
         }
 
