--- a/SC_27_ECMAScript/generators_parte_1.html
+++ b/SC_27_ECMAScript/generators_parte_1.html
@@ -12,6 +12,7 @@
             function* testeGenerator(){
                 console.log('Teste 1');
                 // Executa tudo até a linha abaixo
+                // yield executa a linha acima e tudo que está na linha que ele está.
                 yield console.log('Teste 2');
                 yield console.log('Teste 3');
 
