--- a/SC_27_ECMAScript/array_flat.html
+++ b/SC_27_ECMAScript/array_flat.html
@@ -15,7 +15,7 @@
         let arr2 = arr.flat();
         console.log(arr2);
         arr = [1, 2, 3, 4, [5, 6, 7, 8],10,[11,12,[13,14]]];
-        // Default é 1
+        // Default é 1 para profundidade
         arr2 = arr.flat(2);
         console.log(arr2);
 
