--- a/SC_20_Jquery/selecionando_elementos_parte2.html
+++ b/SC_20_Jquery/selecionando_elementos_parte2.html
@@ -48,7 +48,9 @@
 			//Atuação sobre o array de retorno dos elementos selecionados
 		console.log($('.lista1 .exemplo2:first'))
 		console.log($('.lista1 .exemplo2:last'))
+		// Indices pares
 		console.log($('.lista1 .exemplo2:even'))
+		// Indices ímpares
 		console.log($('.lista1 .exemplo2:odd'))
 	</script>
 
