Ajuste da descricao

--- a/SC_20_Jquery/eventos_extra.html
+++ b/SC_20_Jquery/eventos_extra.html
@@ -40,6 +40,7 @@
             )
             */
 
+            //Função hover é uma sintaxe sugar para mouseenter e mouseleave.
             // Mesmo efeito que adicionar e remover a classe, alternando.  Vide exemplo acima.
             $('#div1').hover(
                 e => $(e.target).toggleClass('destaque')
