--- a/SC_20_Jquery/ajax_extra/index.html
+++ b/SC_20_Jquery/ajax_extra/index.html
@@ -13,7 +13,7 @@
 
 					e.preventDefault();
 					
-					// string chave=valor
+					// string chave=valor de todos os campos do formulário
 					let dados = $('form').serialize();
 					// console.log(dados);
 
