--- a/SC_20_Jquery/eventos_extra.html
+++ b/SC_20_Jquery/eventos_extra.html
@@ -40,7 +40,7 @@
             )
             */
 
-            //Função hover é uma sintaxe sugar para mouseenter e mouseleave.
+            //Função hover é uma sintaxe sugar para mouseenter/mouseout e mouseleave/mouseover.
             // Mesmo efeito que adicionar e remover a classe, alternando.  Vide exemplo acima.
             $('#div1').hover(
                 e => $(e.target).toggleClass('destaque')
